css/screen.css
/* ... */
/* At these sizes we *zoom* the layout */
@media screen and (max-width: 480px) { html { font-size: 9px; } }
@media screen and (max-width: 431px) { html { font-size: 8px; } }

/* Size: Mobile Portrait */
@media screen and (max-width: 387px) {
    
    /* All */
    html {
        font-size: 10px;
    }
    
    /* Header */
    #header {
        min-width: 32rem;
    }
    #header section, #main {
        width: 32rem;
        padding-left: 0;
        padding-right: 0;
    }
    #header section {
        margin-top: 3rem;
    }
    #header section img {
        width: 31.8rem;
        margin: 0 0 2.5rem 0;
    }
    #header section nav {
        width: 32rem;
    }
    #header section nav ul li {
        margin-right: 2.55rem;
    }
    
    /* Section: Home */
    .home #articles {
        width: 32rem;
    }
    .home .date {
        float: none;
    }
    
    /* Section: Article */
    .article h1, .article h2, .article p, .article ul, .article ol, .article .small, .article .large figcaption, .article .code {
        width: 32rem;
    }
    .article ul, .article ol {
        width: 30rem;
    }
    .article .date {
        float: none;
    }
    .article p + p, .article p + aside + p {
        text-indent: 2rem;
    }
    .article ul, .article ol {
        margin-left: 3rem;
        margin-right: 0;
    }
    .article ol.footnotes {
        padding-left: 2rem;
    }
    
    /* Section: Projects */
    .projects header {
        width: 32rem;
    }
    .projects aside, .projects h2, .projects p {
        float: none;
        width: 32rem;
    }
    .projects .nodemo p {
        margin-bottom: 0;
    }
    .projects .button {
        float: none;
        margin: 0;
    }
    .projects section {
        width: 32rem;
        margin-top: 4.5rem;
    }

    /* Section: Library */
    .library h2 {
        margin-bottom: 2rem;
    }
    .library ul li:nth-child(1n) {
        width: 32rem;
        margin-bottom: 3rem;
        margin-right: 0;
    }
    .library ul li section:nth-child(1) {
        height: auto;
    }
    .library ul li section:nth-child(2) {
        height: auto;
    }
    .library ul li section:nth-child(1) img {
        position: static;
        margin-bottom: 1rem;
    }
    .library .ideas li section:nth-child(2),
    .library .ideas li section:nth-child(3) {
        width: 32rem;
    }
    
    /* Section: About */
    .about .photo {
        width: 32rem;
        height: 32rem;
        margin: 0;
    }
    .about h1 {
        width: 32rem;
    }
    .about .bio, .about p {
        width: 32rem;
    }
    .about .bio .email {
        margin-bottom: 3rem;
    }
    .about .bio .email img {
        display: block;
        margin-right: auto;
        margin-left: auto;
        margin-bottom: 1rem;
    }
    .about .block {
        width: 32rem;
    }
    .about .icon {
        width: 32rem;
    }
    
}

/* At these sizes we *zoom* the layout */
@media screen and (max-width: 320px) { html { font-size: 9px; } }
@media screen and (max-width: 288px) { html { font-size: 8px; } }


/* =============================================================================
   Non-Semantic Helper Classes
   ========================================================================== */

/* For image replacement */
.ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; *line-height: 0; }
.ir br { display: none; }

/* Hide from both screenreaders and browsers: h5bp.com/u */
.hidden { display: none !important; visibility: hidden; }

/* Hide only visually, but have it available for screenreaders: h5bp.com/v */
.visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }

/* Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard: h5bp.com/p */
.visuallyhidden.focusable:active, .visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }

/* Hide visually and from screenreaders, but maintain layout */
.invisible { visibility: hidden; }

/* Contain floats: h5bp.com/q */
.clearfix:before, .clearfix:after { content: ""; display: table; }
.clearfix:after { clear: both; }
.clearfix { *zoom: 1; }


/* =============================================================================
   Print Styles
   ========================================================================== */

@media print {
    * { background: transparent !important; color: black !important; box-shadow:none !important; text-shadow: none !important; filter:none !important; -ms-filter: none !important; } /* Black prints faster: h5bp.com/s */
    a, a:visited { text-decoration: underline; }
    a[href]:after { content: " (" attr(href) ")"; }
    abbr[title]:after { content: " (" attr(title) ")"; }
    .ir a:after, a[href^="javascript:"]:after, a[href^="#"]:after { content: ""; }  /* Don't show links for images, or javascript/internal links */
    pre, blockquote { border: 1px solid #999; page-break-inside: avoid; }
    thead { display: table-header-group; } /* h5bp.com/t */
    tr, img { page-break-inside: avoid; }
    img { max-width: 100% !important; }
    @page { margin: 0.5cm; }
    p, h2, h3 { orphans: 3; widows: 3; }
    h2, h3 { page-break-after: avoid; }
}

